Opened 15 years ago

Closed 15 years ago

#3146 closed bug (fixed)

[Sounds] crash in BView::_AddChild

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Preferences/Sounds Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Don't know how to reproduce yet.
hrev28658 under VirtualBox.

Attachments (1)

Sounds.png (113.9 KB ) - added by diver 15 years ago.

Download all attachments as: .zip

Change History (6)

by diver, 15 years ago

Attachment: Sounds.png added

comment:1 by anevilyak, 15 years ago

Owner: changed from marcusoverhagen to anevilyak

Was this at startup or while working with the pref? Latest revision?

comment:2 by diver, 15 years ago

It was while hidng columns using context menu. hrev28658 under VirtualBox.

comment:3 by diver, 15 years ago

Summary: Sounds crash in BView::_AddChild[Sounds] crash in BView::_AddChild

comment:4 by diver, 15 years ago

How to reproduce:
Right click on any column
Right click on any column again.

comment:5 by anevilyak, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28693, thanks for the testcase!

Note: See TracTickets for help on using tickets.